--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+input:checked + svg {
+    display: block;
+}
+
 .text-gradient {
     background: -webkit-linear-gradient(90deg, #FD3A84, #FFA68D);
     -webkit-background-clip: text;
